# HovorunV2

./: .dockerignore  .gitignore  CHANGES.md  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md  cache.py  config.py  database.py  docker-compose.yml  entrypoint.sh  example.env  main.py  message_service.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0ec319cbc95e_add_translation_settings_to_chats.py  2c01ece4472f_add_vision_command.py  49a52f144f4f_add_commands_and_m2m_relationship.py  6e004f9c23cf_add_system_state_table.py  766879474765_add_bluesky_command_support.py  8e99124cf63c_ensure_fb_ig_enabled_for_whitelisted_.py  9ab4112dacab_initial.py  a5097e6fe12d_add_encryption_salt_to_chats.py  e190225ee4ef_replace_is_whitelisted_with_status.py
controllers/: __init__.py  bot.py
controllers/commands/: __init__.py  base.py  debug.py  twitter.py  whitelist.py
src/hovorunv2/: __main__.py  cache.py  config.py  database.py  logger_conf.py  message_service.py
src/hovorunv2/application/: changelog.py  dtos.py  utils.py
src/hovorunv2/application/clients/: bluesky.py  facebook.py  instagram.py  threads.py  tiktok.py  twitter.py
src/hovorunv2/application/data/: chat_service.py  command_service.py  constants.py  languages.py  system_service.py
src/hovorunv2/application/media/: downloader.py  extractor.py
src/hovorunv2/application/services/: access_service.py  chat_data_service.py  chat_status_service.py  cleanup_service.py  command_service.py  language_service.py  media_extractor_service.py  media_service.py  message_service.py  notification_service.py  threads_service.py  tiktok_service.py  translation_providers.py  translation_service.py  twitter_service.py  vision_service.py  whitelist_service.py
src/hovorunv2/controllers/: bot.py
src/hovorunv2/controllers/commands/: __init__.py  base.py  debug.py  twitter.py  whitelist.py
src/hovorunv2/domain/: __init__.py  base.py  chat.py  command.py  system.py
src/hovorunv2/infrastructure/: browser.py  cache.py  config.py  container.py  di.py  fixtures.py  logger.py
src/hovorunv2/infrastructure/database/models/: chat.py
src/hovorunv2/infrastructure/database/repositories/: chat_repository.py
src/hovorunv2/infrastructure/repositories/: chat_repository.py  system_repository.py
src/hovorunv2/interface/telegram/: bot.py  callbacks.py  middlewares.py
src/hovorunv2/interface/telegram/commands/: __init__.py  base.py  debug.py  facebook.py  instagram.py  set_language.py  tiktok.py  twitter.py  whitelist.py  youtube.py
src/hovorunv2/interface/telegram/handlers/: __init__.py  access.py  base.py  bluesky.py  bot_join.py  commands_config.py  debug.py  facebook.py  help.py  instagram.py  set_language.py  settings.py  threads.py  tiktok.py  twitter.py  vision.py  whitelist.py  youtube.py
tests/: __init__.py  conftest.py  test_access_command.py  test_access_policy_enforcement.py  test_bluesky_command.py  test_browser_service.py  test_cache_encryption.py  test_cache_migration.py  test_changelog.py  test_chat_status_state_machine.py  test_command_config.py  test_debug_command.py  test_facebook_command.py  test_instagram_command.py  test_media_extractor.py  test_message_encryption.py  test_notification_service.py  test_permission_rules.py  test_set_language_command.py  test_settings_and_join.py  test_threads_command.py  test_threads_metrics_extraction.py  test_tiktok_command.py  test_twitter_command.py  test_vision_command.py  test_whitelist_command.py
tests/utils/: browser_cache.py
