[project]
name = "hovorunv2"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aiogram",
    "pydantic",
    "pydantic-settings",
    "aiohttp",
    "diskcache-rs>=0.4.9",
]

[project.scripts]
hovorunv2 = "hovorunv2.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hovorunv2"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff",
    "ty",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D107",
    "D203",
    "D213",
    "COM812",
    "ISC001",
    "S101", # Use of assertions allowed by user intent not for business logic
    "PLR0913"
]

[tool.ruff.lint.pydocstyle]
convention = "google"
