[project]
name = "hovorunv2"
version = "0.1.0"
description = "The ultimate wingman for your Telegram group chats — making them smarter, faster, and way more fun."
readme = "README.md"
authors = [
    { name = "TwilightSparkle42", email = "jaden.corr42@gmail.com" }
]
license = { text = "BSD-3-Clause" }
keywords = ["telegram", "bot", "aiogram", "chat-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Chat",
]
requires-python = ">=3.14"
dependencies = [
    "aiogram",
    "pydantic",
    "pydantic-settings",
    "aiohttp",
    "diskcache-rs>=0.4.9",
    "sqlalchemy>=2.0.49",
    "aiosqlite>=0.22.1",
    "greenlet>=3.4.0",
]

[project.urls]
Repository = "https://github.com/HovorunBot/HovorunV2"
Issues = "https://github.com/HovorunBot/HovorunV2/issues"

[project.scripts]
hovorunv2 = "hovorunv2.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hovorunv2"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff",
    "ty",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D107",
    "D203",
    "D213",
    "COM812",
    "ISC001",
    "S101", # Use of assertions allowed by user intent not for business logic
    "PLR0913",
    "D104"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["FBT"]

[tool.ruff.lint.pydocstyle]
convention = "google"
